tests/check/illegal_mdspan_arith.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ auto illegal_mdspan_arith(f32 [1, 2, 3] a, s32 [78, 69] b, int c, bool bl) {
  mds1 : [7, 8];        // ok
  mds2 : [78888, 8999]; // ok
  mds3 : mds1 + mds2;
  mds4 : mds1 - b.span;
  mds5 : mds1 * b.span;
  mds6 : mds2 / a.span;
  mds7 : mds2 % b.span;
  mds8 : mds1 + mds2 + b.span;
  it1 = mds1 / b.span;  // ok
  it2 = {3, 4, 5};      // ok
  mds9 : a.span + 1;    // ok
  mds10 : b.span - c;   // ok
  mds11 : 1 * a.span;   // ok
  mds12 : c / a.span;   // ok
  mds13 : c + 1 % a.span;   // ok
  mds14 : a.span + it1;
  mds15 : b.span * it2;
  mds16 : it1 - mds9;
  mds17 : it2 / mds10;
  mds18 : mds9 - it2;  // ok
  mds19 : a.span / c;   // ok
  mds20 : mds10 / it2;
  mdspan mds21 : b.span % c; // ok
  mdspan<2> mds22 : b.span % c; // ok
  mdspan23 : mds9 - bl;
  mdspan24 : bl * mds9;
  
  f32 [mds10 / it1] data1;  // ok
  f32 [it1 / mds10] data2; // ok
  f32 [b.span / c] data3; // ok
  f32 [mds10 + c] data4; // ok
  f32 [a.span + c] data5; // ok
  f32 [mds10 * bl] data6;
  f32 [bl + a.span] data7;

  with index in mds10 / it1 {} // ok
  // The error in 'with-in' leads to abort()
  // So put this test at the end of the function
  with index in mds10 % it2 {}
}

// CHECK: error: in operation "+": unable to apply to the types (mdspan<2> [] vs. mdspan<2> []).
// CHECK: error: `mds3' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "-": unable to apply to the types (mdspan<2> [] vs. mdspan<2> []).
// CHECK: error: `mds4' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "*": unable to apply to the types (mdspan<2> [] vs. mdspan<2> []).
// CHECK: error: `mds5' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "/": dimension inconsistent (2 vs. 3).
// CHECK: error: `mds6' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: `mds7' is declared as "mdspan<> []" but initialized as "ituple<2>".
// CHECK: error: in operation "+": unable to apply to the types (mdspan<2> [] vs. mdspan<2> []).
// CHECK: error: in operation "+": unable to apply to the types (unknown vs. mdspan<2> []).
// CHECK: error: `mds8' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "+": dimension inconsistent (3 vs. 2).
// CHECK: error: `mds14' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "*": dimension inconsistent (2 vs. 3).
// CHECK: error: `mds15' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "-": dimension inconsistent (2 vs. 3).
// CHECK: error: `mds16' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "/": dimension inconsistent (3 vs. 2).
// CHECK: error: `mds17' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "/": dimension inconsistent (2 vs. 3).
// CHECK: error: `mds20' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "-": unable to apply to the types (mdspan<3> [] vs. bool).
// CHECK: error: `mdspan23' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "*": unable to apply to the types (bool vs. mdspan<3> []).
// CHECK: error: `mdspan24' is declared as "mdspan<> []" but initialized as "unknown".
// CHECK: error: in operation "*": unable to apply to the types (mdspan<2> [] vs. bool).
// CHECK: error: unexpected data type 'unknown' is found in mdspan.
// CHECK: error: in operation "+": unable to apply to the types (bool vs. mdspan<3> []).
// CHECK: error: unexpected data type 'unknown' is found in mdspan.
// CHECK: error: in operation "%": dimension inconsistent (2 vs. 3).
// CHECK: error: expect a span type or int type, but got the unknown type.
